0.0.1:
  - Initial public release.
0.0.2:
  - Fix /money pay not detecting missing accounts. 
0.0.3:
  - Update VaultUnlocked to 2.9.0.
0.0.4:
  - Format money values with commas and decimals for easier reading.
0.0.5:
  - Fix the silent subarg not working properly.
0.0.6:
  - Sort out an issue displaying the stats command output.
  - Prevent sending messages to null CommandSenders.