@@ -11,3 +11,4 @@
 0.0.6:
   - Sort out an issue displaying the stats command output.
   - Prevent sending messages to null CommandSenders.
+  - Improve player-name-change detection.
